--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Rob Hinds
-twitter_username: rob_hinds
-name: Rob Hinds
+title: Phil Ellsworth
+twitter_username: philellsworth
+name: Phil Ellsworth
 
 # Build settings
 markdown: kramdown
@@ -10,27 +10,27 @@ markdown: kramdown
 #Links that will appear in the navbar
 primarylinks:
  - title: Blog
-   url: http://automateddeveloper.blogspot.com/
+   url: http://philellsworth.com/
  - title: GitHub
-   url: https://github.com/robhinds
- - title: StackOverflow
-   url: http://stackoverflow.com/users/258813/rhinds
- - title: DZone
-   url: https://dzone.com/users/899489/rhinds.html
+   url: https://github.com/philellsworth
+ #- title: StackOverflow
+ #  url: http://stackoverflow.com/users/258813/rhinds
+ #- title: DZone
+ #  url: https://dzone.com/users/899489/rhinds.html
  - title: LinkedIn
-   url: https://www.linkedin.com/pub/rob-hinds/21/361/3b1
+   url: https://www.linkedin.com/in/philellsworth
 
 #Any buzzword skills you want to include
 skills:
- - Groovy
- - Spring MVC
- - Spring Boot
- - Gradle
- - Java
- - JPA
- - SQL
- - REST
- - Tech Architecture
+ - HTML
+ - CSS
+ - Adobe InDesign
+ - Adobe Illustrator
+ - Adobe Photoshop
+ - Adobe Dreamweaver
+ - WordPress
+ #- REST
+ #- Tech Architecture
 
 #Blogfeed is optional - including this will add JS to call the feed and populate blog list
 blogfeed: http://automateddeveloper.blogspot.com/feeds/posts/default
