Add Target info

--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,14 @@ roles:
  - title: Substitute Teacher
    start: 2017
    end: Ongoing
-   employer: Cypress-Fairbanks Independent School District, primarily Cypress Ranch and Cypress Woods high schools. 
+   employer: Cypress-Fairbanks ISD, primarily at Cypress Ranch and Cypress Woods high schools. 
    description: Performs the duties of a teacher in the teacher’s absence, in accordance with instructions and policies of the teacher, school and district. Instructs students in a wide array of some of the largest high schools (3,500+) in one of the nation's largest school districts (120,000+).
- - title: Senior Engineer
-   start: 2012
-   end: 2016
-   employer: Covestor
-   description: Covestor is an investment marketplace startup that was successfully acquired by Interactive Brokers in 2015. <br/> I am a senior engineer working closely with the CTO, working across the full-stack, I am involved in all aspects of the technology including the website and back-end services.
+ - title: Hardlines Sales Team Member
+   start: 2015
+   end: Ongoing
+   employer: Target Corporation
+   description: Assists guests in a busy retail environment, handling cash and inventory, restocking merchandise and assisting other team members. 
+
  - title: Associate Manager
    start: 2005
    end: 2012
