--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ roles:
    start: 2017
    end: Ongoing
    employer: Cypress-Fairbanks ISD, primarily at Cypress Ranch and Cypress Woods high schools. 
-   description: Performs the duties of a teacher in the teacher’s absence, in accordance with instructions and policies of the teacher, school and district. Instructs students in a wide array of some of the largest high schools (3,500+) in one of the nation's largest school districts (120,000+).
+ - description: Performs the duties of a teacher in the teacher’s absence, in accordance with instructions and policies of the teacher, school and district. Instructs students in a wide array of some of the largest high schools (3,500+) in one of the nation's largest school districts (120,000+).
  - title: Hardlines Sales Team Member
    start: 2015
    end: Ongoing
