--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ roles:
    start: 2015
    end: Ongoing
    employer: Target Corporation
-   description: Assists guests in a busy retail environment, handling cash and inventory, restocking merchandise and assisting other team members. 
+ - description: Assists guests in a busy retail environment, handling cash and inventory, restocking merchandise and assisting other team members. 
 
  - title: Associate Manager
    start: 2005
