--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ skills:
  - Professional Editing and Reporting
 
 #Blogfeed is optional - including this will add JS to call the feed and populate blog list
-blogfeed: http://philellsworth.com
+blogfeed: http://philellsworth.com/feed/
 
 #Work experience is required
 roles:
